--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,4 +17,5 @@ html
     <!-- Latest compiled and minified Locales -->
     <script src='https://unpkg.com/bootstrap-table@1.18.0/dist/locale/bootstrap-table-zh-CN.min.js'></script>
   body
-    block content
+    div(class='container-fluid')
+      block content
